Native/Test/KL/require.kl
/*
 *  Copyright 2010-2012 Fabric Engine Inc. All rights reserved.
 */

require UnknownType;
require UnknownPlugin, AnotherUnknownType;
require AnotherUnknownPlugin;
